--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet" />
     <title>Anomalyx Crypto</title>
+    <meta
+      name="description"
+      content="Trade cryptocurrencies with AI Trade – precise analysis, low fees, and fast transactions."
+    />
+    <meta
+      name="keywords"
+      content="AI Trade, crypto trading, trading bot, Bitcoin, Ethereum, investments"
+    />
+    <meta
+      property="og:title"
+      content="AI Trade – Automated Bot for Crypto Trading"
+    />
+    <meta
+      property="og:description"
+      content="Maximize profits with AI-driven algorithms. Emotion-free trading, pure strategy."
+    />
+    <meta property="og:image" content="/preview.png" />
   </head>
   <body>
     <div id="root"></div>
